# qrb_ros_samples

./: README.md  component  package.xml  setup.py
ai_audio/sample_tts/qrb_ros_tts/: CMakeLists.txt  package.xml
ai_audio/sample_tts/qrb_ros_tts/launch/: qrb_ros_tts.py
ai_audio/sample_tts/qrb_ros_tts/src/: main.cpp  speaker_node.cpp
ai_audio/sample_tts/tts/: CMakeLists.txt
ai_audio/sample_tts/tts/config/: tts_paths.cfg
ai_audio/sample_tts/tts/include/: DataUtil.hpp  IOTensor.hpp  QnnTypeMacros.hpp  audio_compat.hpp  audio_types.hpp  bert.hpp  bert_layout.hpp  config_loader.hpp  dict_en.hpp  inference_engine.hpp  melo_bert_compat.hpp  sentence_split.hpp  synthesizer.hpp  text_normalizer.hpp
ai_audio/sample_tts/tts/src/: DataUtil.cpp  IOTensor.cpp  bert.cpp  config_loader.cpp  inference_engine.cpp  sentence_split.cpp  synthesizer.cpp  text_normalizer.cpp
ai_vision/sample_face_recognition/sample_face_recognition/: CMakeLists.txt  package.xml
ai_vision/sample_face_recognition/sample_face_recognition/launch/: face_recognition.launch.py
ai_vision/sample_face_recognition/sample_face_recognition/scripts/: image_pub.py
ai_vision/sample_face_recognition/sample_face_recognition/src/: face_detect.cpp  face_recognition.cpp
ai_vision/sample_midas_yolo_parallel/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ai_vision/sample_midas_yolo_parallel/config/: config.yaml
ai_vision/sample_midas_yolo_parallel/docs/: build_combined_binary.md
ai_vision/sample_midas_yolo_parallel/include/sample_midas_yolo_parallel/: midas_yolo_fusion_node.hpp
ai_vision/sample_midas_yolo_parallel/launch/: launch_with_image_publisher.py  launch_with_qrb_ros_camera.py  launch_with_usb_cam.py
ai_vision/sample_midas_yolo_parallel/resource/: sample_midas_yolo_parallel
ai_vision/sample_midas_yolo_parallel/sample_midas_yolo_parallel/: midas_yolo_parallel_node.py
ai_vision/sample_midas_yolo_parallel/src/: fast_image_publisher_node.cpp  midas_yolo_fusion_node.cpp
ai_vision/sample_midas_yolo_parallel_cpp/: CMakeLists.txt  package.xml
ai_vision/sample_midas_yolo_parallel_cpp/include/sample_midas_yolo_parallel_cpp/: midas_yolo_fusion_node.hpp
ai_vision/sample_midas_yolo_parallel_cpp/src/: fast_image_publisher_node.cpp  midas_yolo_fusion_node.cpp
debian/: changelog  control  (+4 more)
robotics/sample_3d_lidar_semantic_segmentation/: README.md  package.xml  setup.cfg  setup.py
robotics/sample_3d_lidar_semantic_segmentation/config/: config.yaml
robotics/sample_3d_lidar_semantic_segmentation/launch/: launch.py
robotics/sample_3d_lidar_semantic_segmentation/sample_3d_lidar_semantic_segmentation/: __init__.py  lidar_semantic_segmentation.py  postprocess.py  preprocess.py
robotics/sample_3d_lidar_semantic_segmentation/test/: test_copyright.py  test_flake8.py  test_pep257.py
robotics/sample_fall_detection/: README.md  package.xml  setup.cfg  setup.py
robotics/sample_fall_detection/launch/: launch_with_qrb_ros_camera.py
robotics/sample_fall_detection/resource/: sample_fall_detection
robotics/sample_fall_detection/sample_fall_detection/: fall_detect_edge_impulse.py
robotics/sample_followme/: CMakeLists.txt  README.md  package.xml
robotics/sample_followme/config/: tracking_params.yaml
robotics/sample_followme/include/: controller.h  tracker.h
robotics/sample_followme/include/follow_me/: depth_processor.hpp  person_tracker_node.hpp  pid_controller.hpp  state_machine.hpp  template_pool.hpp
robotics/sample_followme/launch/: person_tracking.launch.py
robotics/sample_followme/src/: controller.cpp  depth_processor.cpp  main.cpp  person_tracker_node.cpp  pid_controller.cpp  state_machine.cpp  template_pool.cpp  tracker.cpp
robotics/sample_followme/srv/: StateControl.srv
robotics/sample_followme/test/src/: main.cpp  test.cpp
robotics/sample_robot_arm_grasping_with_pose_estimation/grasp_perception/: package.xml  setup.cfg  setup.py
robotics/sample_robot_arm_grasping_with_pose_estimation/grasp_perception/config/: file_input_publisher.yaml  grasp_perception_node.yaml
robotics/sample_robot_arm_grasping_with_pose_estimation/grasp_perception/grasp_perception/: __init__.py  file_input_publisher.py  grasp_perception_node.py
robotics/sample_robot_arm_grasping_with_pose_estimation/grasp_perception/launch/: inference_with_camera_stream.launch.py  inference_with_local_file.launch.py
robotics/sample_robot_arm_grasping_with_pose_estimation/grasp_perception/models/: .gitignore
robotics/sample_robot_arm_grasping_with_pose_estimation/grasp_perception_msgs/: CMakeLists.txt  package.xml
robotics/sample_robot_arm_grasping_with_pose_estimation/grasp_perception_msgs/msg/: PoseEstimationResult.msg
robotics/simulation_sample_pick_and_place/: .setup_assistant  CMakeLists.txt  CMakeLists.txt.fixed  README.md  package.xml
robotics/simulation_sample_pick_and_place/config/: rml_63.ros2_control.xacro  rml_63.srdf  rml_63.urdf.xacro  rml_63_ros2_controllers.yaml
robotics/simulation_sample_pick_and_place/launch/: simulation_sample_pick_and_place.launch.py
robotics/simulation_sample_pick_and_place/qrb_ros_arm_bringup/: CMakeLists.txt  package.xml
robotics/simulation_sample_pick_and_place/qrb_ros_arm_bringup/scripts/: rml_63_gazebo_and_moveit_launch.sh
robotics/simulation_sample_pick_and_place/qrb_ros_arm_moveit_config/: package.xml
robotics/simulation_sample_pick_and_place/qrb_ros_arm_pick_place/: CMakeLists.txt  package.xml
robotics/simulation_sample_pick_and_place/qrb_ros_sim_description/: CMakeLists.txt  package.xml
robotics/simulation_sample_pick_and_place/qrb_ros_sim_gazebo/: CMakeLists.txt
robotics/simulation_sample_pick_and_place/scripts/: build.sh  rml_63_gazebo_and_moveit_launch.sh
robotics/simulation_sample_pick_and_place/src/: qrb_ros_arm_pick_place.cpp
robotics/simulation_sample_pick_and_place/urdf/: gazebo_rml_63_gripper.urdf.xacro
sample_home_company_robot/: CMakeLists.txt
sample_home_company_robot/config/: tree.xml
sample_home_company_robot/include/sample_home_company_robot/: send_follow_me_service.hpp  send_to_llm.hpp  start_fall_detection.hpp
(+211 files in other folders)
