<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sample_midas_yolo_parallel</name>
  <version>1.0.0</version>
  <description>Parallel MiDaS and YOLO segmentation pipeline using ROS nodes and QNN inference</description>
  <maintainer email="opensource@qualcomm.com">Qualcomm Technologies, Inc.</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>sample_midas_yolo_parallel_cpp</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
