<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_tts</name>
  <version>0.0.1</version>
  <description>ROS 2 Jazzy TTS speaker node using the MeloTTS/QNN tts library</description>
  <maintainer email="chach@qti.qualcomm.com">changchen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>

  <build_depend>libpulse-dev</build_depend>
  <build_depend>libqnn-dev</build_depend>
  <build_depend>libqnn1</build_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
