<?xml version="1.0"?>
<!-- Copyright (c) 2025 Qualcomm Innovation Center, Inc. All rights reserved. -->
<!-- SPDX-License-Identifier: BSD-3-Clause-Clear -->
<package format="3">
  <name>grasp_perception</name>
  <version>1.0.0</version>
  <description>ROS2 Jazzy DenseFusion RGB-D inference package</description>
  <maintainer email="tengf@qti.qualcomm.com">Teng Fan</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <depend>grasp_perception_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
